// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING MenuBtn component GIVEN default data WHEN the MenuBtn component is opened THEN it should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="w-16 md:w-20 aspect-square rounded-full shadow-highBlur transition z-50 active:scale-95 fixed left-1/2 bottom-6 lg:bottom-12 -translate-x-1/2 group bg-white lg:hover:bg-primary-400 text-white"
    data-testid="menu-btn__button"
  >
    <div
      class="flex flex-col justify-center items-center group-hover:opacity-100 opacity-0 transition-opacity"
    >
      <svg
        class="w-8 h-8 text-white"
        data-testid="menu-btn__close-icon"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 18L18 6M6 6L18 18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`TESTING MenuBtn component GIVEN default data WHEN the MenuBtn component is rendered in snapshot testing THEN it should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="w-16 md:w-20 aspect-square rounded-full shadow-highBlur transition z-50 active:scale-95 fixed left-1/2 bottom-6 lg:bottom-12 -translate-x-1/2 group bg-primary-400 lg:hover:bg-white text-primary-400"
    data-testid="menu-btn__button"
  >
    <div
      class="flex flex-col justify-center items-center group-hover:opacity-100 opacity-0 transition-opacity"
    >
      <svg
        class="w-8 h-8"
        data-testid="menu-btn__hamburger-icon"
        fill="none"
        height="48"
        viewBox="0 0 48 48"
        width="48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 12H40M8 24H40M8 36H40"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;
